<resources>
    <string name="app_name">ScooterSharing</string>
    <string name="start_name">Start Ride</string>
    <string name="edit_ride">Edit Ride</string>
    <string name="last_added">Last added:</string>
    <string name="name">Name:</string>
    <string name="where">Where:</string>
    <string name="add_ride">Add Ride</string>
    <string name="list_ride">List Ride</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome !</string>
    <string name="registerScooter">Register Scooter</string>
    <string name="viewCurrentRide">View Current Ride</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="price">Price</string>
    <string name="status">Status</string>
    <string name="scooter_added">Scooter Added!</string>
    <string name="error">Error: %1$s</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="others">Others</string>
    <string name="view">View Scooter</string>
    <string name="ride_started">Ride Started!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="title_activity_ride_end">RideEndActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="createScooter">Create Scooter</string>
    <string name="viewAvailableRide">View Available Ride</string>
    <string name="scooterPic">Take a picture of the scooter</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="endRide">End Ride</string>
</resources>