<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:title="@string/home"
        android:id="@+id/menuHome"
        android:icon="@drawable/ic_home"/>
    <item
        android:title="@string/profile"
        android:id="@+id/menuProfile"
        android:icon="@drawable/ic_boy"/>

    <item
        android:title="@string/createScooter"
        android:id="@+id/menuScooter"
        android:icon="@drawable/ic_baseline_electric_bike_24"/>

    <item
        android:title="@string/viewAvailableRide"
        android:id="@+id/menuRide"
        android:icon="@drawable/ic_baseline_electric_bike_24"/>

    <item
        android:title="@string/viewCurrentRide"
        android:id="@+id/endRide"
        android:icon="@drawable/ic_baseline_electric_bike_24"/>

    <item android:title ="@string/others">
        <menu>
            <item
                android:id="@+id/test"
                android:icon="@drawable/ic_baseline_lock_24"
                android:title="@string/others"/>
        </menu>
    </item>

</menu>